# sfm-solver

./: .cursorrules  .gitignore  README.md  debug_coupling.py  debug_electron.py  finetune_g1_results.txt  lepton_results_final.txt  lepton_results_optimized.txt  optimizer_g1_test.txt  optimizer_log.txt  optimizer_log_v2.txt  pyproject.toml  requirements.txt  scan_g1_results.txt  test_coupling_fix.py  test_harmonic_oscillator.py  test_optimizer_new_model.py  test_phase2_refactor.py
logs/: .gitignore
notebooks/: 01_single_particle.ipynb
outputs/: .gitignore
scripts/: analyze_energy_components.py  calibrate_beta.py  check_4d_structure_circulation.py  check_coupling.py  check_generation_energies.py  check_scaled_circulation.py  compare_g1_diagnostic.py  debug_coupling_factors.py  debug_winding.py  diagnose_G5D.py  diagnose_convergence.py  diagnose_coupling_energy.py  diagnose_energy_landscape.py  diagnose_energy_landscape_v2.py  diagnose_outer_loop_convergence.py  estimate_parameters.py  finetune_g1_baryon.py  scan_G5D.py  scan_G5D_focused.py  scan_g1.py  scan_g1_alpha.py  scan_g1_baryon.py  scan_g1_baryon_hybrid.py  scan_g1_lambda_neutron.py  scan_g1_quick_test.py  scan_g_internal.py  test_5d_energy_computation.py  test_all_particles.py  test_baryon_4D.py  test_baryon_em.py  test_baryon_scf.py  test_baryons.py  test_convergence.py  test_g1_optimal.py  test_hadron_solver.py  test_leptons.py  test_mesons.py  test_phase1_only.py  test_self_consistent_solver.py  test_shape_solver_circulation.py  (+2 more)
scripts/legacy/: beta_exploration.py  scan_V1.py  test_baryon_fix.py  test_g1_scan.py  test_meson_same_well.py  test_nl_diagnostic.py  test_phase1_refactor.py  test_scf_g1_scan.py  test_spin_implementation.py  tune_em_params.py
src/sfm_solver/: __init__.py
src/sfm_solver/analysis/: __init__.py  mass_spectrum.py
src/sfm_solver/core/: __init__.py  calculate_beta.py  constants.json  constants.py  correlated_basis.py  energy_minimizer.py  field_energy_5d.py  nonseparable_wavefunction_solver.py  parameters.py  particle_configurations.py  sfm_global.py  shape_solver.py  spatial_coupling.py  spatial_wavefunction.py  unified_solver.py  universal_energy_minimizer.py
src/sfm_solver/eigensolver/: __init__.py  amplitude_eigensolver.py  amplitude_solver.py  coupled_amplitude_solver.py  full_coupled_solver.py  gravitational_amplitude_solver.py  linear.py  nonlinear.py  nonlinear_coupled.py  sfm_amplitude_solver.py  sfm_lepton_solver.py  spectral.py
src/sfm_solver/fitting/: __init__.py
src/sfm_solver/forces/: __init__.py  electromagnetic.py
src/sfm_solver/legacy/: __init__.py  alpha_fit.py  coupled_solver.py  effective.py  gp_solver.py  sfm_amplitude_solver.py  spatial_wavefunction.py  test_coupled_eigenstates.py  test_eigensolver.py  test_sfm_amplitude.py
src/sfm_solver/multiparticle/: __init__.py  baryon.py  color_verification.py  composite_baryon.py  composite_meson.py  meson.py
src/sft_solver/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_coupled_eigenstates.py  test_eigensolver.py  test_energy_minimizer.py  test_gp_solver.py  test_grid.py  test_physics.py  test_potentials.py  test_sfm_amplitude.py  test_shape_solver.py  test_spatial_coupling.py  test_spectral_operators.py  test_tier1_eigenstates.py  test_tier1_leptons.py  test_tier1b_em_forces.py  test_tier2_baryons.py  test_tier2_color.py  test_tier2_hadrons.py  test_tier2b_quarkonia.py  test_unified_solver.py  test_winding_kinetic.py
tests/legacy/: test_potentials.py
(+49 files in other folders)
